[package]
name = "concurrency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
rand = "0.8.5"
log = "0.4.21"
oneshot = "0.1.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.37.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
] }
